@@ -2,6 +2,7 @@ Revision history for perl distribution Toadfarm
 
 0.73 Not Released
  - Remove deprecated script/toadfarm
+ - Can mount a Mojolicious object
 
 0.72 2016-01-03T00:14:25+0100
  - Add support for "start --tail"
